--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "webpack-dev-server --open"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "vee-validate": "^2.2.8",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
