--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "webpack-dev-server --open"
   },
   "dependencies": {
+    "axios": "^0.18.1",
     "bootstrap": "^4.3.1",
     "vee-validate": "^2.2.8",
     "vue": "^2.6.10",
