--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.3.1",
     "vee-validate": "^2.2.8",
     "vue": "^2.6.10",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.6",
     "vuex": "^3.1.1"
   },
